# hsk-bot

./: .cursorrules  .gitignore  Dockerfile  README.md  fly.toml  plan.md  process_hsk_pos.py  pyproject.toml
resources/: hsk-1.csv  hsk-2.csv  hsk-3.csv  hsk-4.csv  hsk-5.csv  hsk-6.csv
src/hsk_bot/: __main__.py  bot.py  game.py  models.py
tests/: test_bot.py  test_game.py  test_models.py
